<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_to_do"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="todoexpert.lesiecki.com.todoexpert.AddToDoActivity">

    <EditText
        android:id="@+id/content_edit_text"
        android:hint="@string/what_to_do"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <CheckBox
        android:layout_below="@+id/content_edit_text"
        android:id="@+id/done_checkbox"
        android:text="@string/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/add_to_do"
        android:id="@+id/add_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
